		CHANGES IN pitchRx VERSION 0.6

MINOR FIXES

	- When passing a model to strikeFX, a white strike-zone is now drawn (if it isn't a differenced density)

	- In animateFX, if the color variable is a factor, the original ordering of levels will be preserved.

		CHANGES IN pitchRx VERSION 0.5

MAJOR CHANGES

   - point.size is no longer supported in animateFX. Point size is now governed by distance from home plate (they will get larger as they progress toward home plate).

   - Default values for the start and end options of scrapeFX were removed. The user must specify dates.

   - Default value for adjust option in strikeFX was changed to FALSE to avoid confusing the user by adjusting vertically locations without specifying so.

NEW FEATURES

   - the model option allows one to create probabilistic strike-zone densities as opposed a "raw" strike-zone density. See the strikeFX example page for an example using mgcv::gam.

   - the avg.by option allows one to average over PITCHf/x parameters for a given discrete variable (note that any faceting variables will be included in the index). That is, the average PITCHf/x parameters are plotted for every unique combination of facet and avg.by variable(s).

DOCUMENTATION

    - Documentation of non-exported functions was removed.

		CHANGES IN pitchRx VERSION 0.4

NEW FEATURES
   
    - HTML vignette now available.

    - strikeFX has a new geom="subplot2d" option.


		CHANGES IN pitchRx VERSION 0.3

NEW FEATURES
   
    - The data(urls) object is now updated to include 2013 urls.

   - The function updateUrls() is now exported so that users can collect urls that are not already provided in data(urls).

		CHANGES IN pitchRx VERSION 0.2

NEW FEATURES

   - see here for a comprehensive tutorial: http://cpsievert.github.com/pitchRx/demo

   - 3D plots of pitch trajectories are now available through interactiveFX(). Note that spheres==TRUE employs basic rgl::spheres3d functionality; otherwise rgl::plot3d is used

