@@ -4,4 +4,9 @@ export(interactiveFX)
 export(scrapeFX)
 export(strikeFX)
 export(urlsToDataFrame)
-importFrom(plyr,join)
+import(mgcv)
+import(plyr)
+import(rgl)
+importFrom(MASS,kde2d)
+importFrom(lubridate,days)
+importFrom(stringr,str_extract_all)
